--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "nodemon": "^1.14.11",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {},
   "scripts": {
